@@ -80,14 +80,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
 
-   * mod_proxy: Add explicit flushing feature.
-     When Servlet container sends AJP body message with size 0,
-     this means that Servlet container has asked for an explicit flush.
-     Create flush bucket in that case. This feature has been added
-     to the recent Tomcat versions without breaking the AJP protocol.
-     Trunk:http://svn.apache.org/viewvc?view=rev&revision=468941
-     +1: mturk, rpluem, jfclere
-
     * mpm_winnt: Fix return values from wait_for_many_objects.
       Trunk version of patch:
         http://svn.apache.org/viewvc?view=rev&revision=428029
